[metadata]
name = kabbes_dns_hosts
version = 0.0.0
author = James Kabbes
author_email = james.kabbes@gmail.com
description = repository for writing dns host mapping programmatically
long_description = file: README.md
long_description_content_type = text/markdown
url = https://pypi.org/project/kabbes_dns_hosts
project_urls =
    GitHub = https://github.com/jameskabbes/dns_hosts
    Documentation = https://jameskabbes.github.io/dns_hosts
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src